kubernetes-conf/apps.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solr
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
     run: solr
  template:
    metadata:
      labels:
        run: solr
    spec:
      nodeName: docker02
      containers:
      - name: solr
        image: harbor.nkp.cz:30004/library/solr:8.0.0-processing-index
        ports:
        - containerPort: 8983
          name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fcrepo
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
     run: fcrepo
  template:
    metadata:
      labels:
        run: fcrepo
    spec:
      nodeName: docker02
      containers:
      - name: fcrepo
        image: harbor.nkp.cz:30004/library/fcrepo:3.8.1
        volumeMounts:
        - name: fcrepo-pv
          mountPath: /usr/local/fedora/data/objects
        - name: kramerius-import
          mountPath: /data/import 
        ports:
        - containerPort: 8080
          name: http
      volumes:
       - name: fcrepo-pv
         hostPath:
            path: /data/fcrepo 
       - name: kramerius-import
         hostPath:
            path: /data/import
---
apiVersion: v1               
kind: Service                
metadata:                    
  name: fcrepo 
  labels:                    
    run: fcrepo
spec:                        
  type: ClusterIP
  selector:                   
    run: fcrepo
  ports:                     
  - name: http               
    port: 8080               
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1               
kind: Service                
metadata:                    
  name: solr 
  labels:                    
    run: solr
spec:                        
  type: ClusterIP
  selector:                   
    run: solr
  ports:                     
  - name: http               
    port: 8983               
    targetPort: 8983
    protocol: TCP   
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kramerius
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
     run: kramerius
  template:
    metadata:
      labels:
        run: kramerius
    spec:
      nodeName: docker02
      containers:
      - name: kramerius
        image: harbor.nkp.cz:30004/library/kramerius:latest    
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: kramerius-import
          mountPath: /data/import         
      imagePullSecrets:
       - name: regcred 
      volumes:
       - name: kramerius-import
         hostPath:
            path: /data/import     
---
apiVersion: v1               
kind: Service                
metadata:                    
  name: kramerius 
  labels:                    
    run: kramerius
spec:                        
  type: NodePort
  selector:                   
    run: kramerius
  ports:  
    - port: 8080
      nodePort: 30003
      name: http
