kubernetes-conf/image-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imgserver
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
     run: imgserver
  template:
    metadata:
      labels:
        run: imgserver
    spec:
      nodeName: docker02
      containers:
      - name: imgserver
        image: klokantech/iiifserver:latest
        ports:
        - containerPort: 80
          name: tcp
        volumeMounts:
        - name: imgserver-import
          mountPath: /var/www/imageserver/data        
      volumes:
       - name: imgserver-import
         hostPath:
            path: /data/imgserver
---
apiVersion: v1               
kind: Service                
metadata:                    
  name: imgserver 
  labels:                    
    run: imgserver
spec:                        
  type: NodePort
  selector:                   
    run: imgserver
  ports:  
    - port: 80
      nodePort: 30006
      name: tcp
