kubernetes-conf/jenkins.yaml
apiVersion: v1               
kind: Service                
metadata:                    
  name: jenkins 
  labels:                    
    run: jenkins
spec:                        
  type: NodePort
  selector:                   
    run: jenkins
  ports:  
    - port: 8080
      nodePort: 30080
      name: http  
---
apiVersion: v1
kind: Pod
metadata:
  name: jenkins
  labels:
    run: jenkins
spec:
  nodeName: docker01
  containers:
    - name: jenkins
      image:  harbor.nkp.cz:30004/library/jenkins:0.0.1
      resources:
        limits:
           memory: "4Gi"
        requests:
           memory: "1Gi"
      imagePullPolicy: "Always"
      ports:
        - name: http-port
          containerPort: 8080
        - name: jnlp-port
          containerPort: 50000
      volumeMounts:
        - name: jenkins-workspace
          mountPath: /var/jenkins_home
        - name: docker-socket
          mountPath: /var/run/docker.sock
  imagePullSecrets:
    - name: regcred
  volumes:
   - name: jenkins-workspace
     hostPath:
        path: /var/jenkins   
   - name: docker-socket
     hostPath:
        path: /var/run/docker.sock
