kubernetes-conf/kramerius.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kramerius
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
     run: kramerius
  template:
    metadata:
      labels:
        run: kramerius
    spec:
      nodeName: docker02
      containers:
      - name: kramerius
        image: harbor.nkp.cz:30004/library/kramerius:latest   
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: kramerius-import
          mountPath: /data/import     
      imagePullSecrets:
       - name: regcred
      volumes:
       - name: kramerius-import
         hostPath:
            path: /data/import     
---
apiVersion: v1               
kind: Service                
metadata:                    
  name: kramerius 
  labels:                    
    run: kramerius
spec:                        
  type: NodePort
  selector:                   
    run: kramerius
  ports:  
    - port: 8080
      nodePort: 30003
      name: http
